# AI-Decision-Engine-for-Insurance-Underwriting-and-Fraud-Detection

./: .env.example  .gitignore  QuickStart.ps1  README.md  config.py  main.py  pyproject.toml  test_risk_apis.py
api/: __init__.py  ai_risk_routes.py  image_models.py  image_routes.py  medical_code_models.py  medical_code_routes.py  models.py  proposal_routes.py  risk_routes.py  routes.py
data/medical_codes/: __init__.py  code_analyzer.py  cpt_codes.py  hcpcs_codes.py  icd10_codes.py  ndc_codes.py
data/schemas/: __init__.py  agent_schema.py  claims_schema.py  demographic_schema.py  financial_schema.py  medical_schema.py  product_schema.py  regional_schema.py  result_schema.py
db/: README.md  __init__.py  database.py  models.py  seed.py
docs/New Tables Plan/: Implementation Plan.md  postgres CREATE table queries.md
docs/general/: ARCHITECTURE.md  CHANGELOG.md  GEMINI.md  GETTING_STARTED.md  OLLAMA_INTEGRATION.md  OLLAMA_SETUP.md  RISK_CALCULATORS.md  Week Sprint - Task Summary (Nov 24-28, 2025).md
docs/project-planning/: AI Image Detection & Medical Codes(Dev_1).md  Risk Calculators & JSON Structures.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  apiClient.ts  index.css  types.ts
models/risk_calculators/: __init__.py  agent_risk.py  claims_risk.py  combined_risk.py  demographic_risk.py  financial_risk.py  medical_risk.py  product_risk.py  regional_risk.py  utils.py
risk_tests/: README.md
services/: ai_risk_service.py  ollama_service.py  risk_assessment.py
tests/: test_image_analysis.py  test_medical_codes.py
(+98 files in other folders)
